# TaikoQT

./: README.md
TaikoQT/: CMakeLists.txt  GameArea.qml  TaikoDrum.qml  chart.json  db.db  main.cpp  main.qml  notes2.json  notes3.json
TaikoQT/songs/: 17902 Takamitsu Yoko - Angel Dream (1).osz
